# 3D_bounding_box_prediction

./: .gitignore  README.md  check_env.py  eval.py  eval_onnx.py  export.py  main.py  pyproject.toml  sanity_check.py  train.py
configs/: config.yaml  load_config.py
data/: data_module.py  dataset.py  utils.py
models/: backbone_pc.py  backbone_rgb.py  fusion_node.py  pipeline_main.py
utils/: geometry.py  heatmap_viz.py  metrics.py  visualizer.py
visualizer/: mask_2dbox_viz.py  open3d_viz.py  point_viz.py
